added link from index to assignment 1

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>test site</h1>
+    <p style = "text-align: left; font-size: 20px; color: red;">
+        <a href=assignment1.html>Back to assignment 2 </a></p>
 </body>
 </html>
