--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Site</title>
-    <link rel="stylesheet" href="teststyles.css">
+    <link rel="stylesheet" href="webdevsitestyles.css">
 </head>
 <body>
-    <h1>test site</h1>
-    <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=assignment1.html>Back to assignment 2 </a></p>
+    <h1>Introduction to Web Development</h1>
+    <div>
+        <p style = "text-align: left; font-size: 20px; color: red;">
+            <a href=assignment1.html>Assignment 1</a></p>
+        <p style = "text-align: left; font-size: 20px; color: red;">
+            <a href=assignment2.html>Assignment 2</a></p>
+        <p style = "text-align: left; font-size: 20px; color: red;">
+            <a href=practicepage.html>Practice Page for myself. </a></p>
+    </div>
+    
 </body>
 </html>
