new exercises, made a general practice page, changed folders

--- a/assignments/assignment2.html
+++ b/assignments/assignment2.html
@@ -11,7 +11,9 @@
 
     <body style="background-color: rgb(192, 161, 150);">
         <p style = "text-align: left; font-size: 20px; color: red;">
-            <a href=index.html>Back to main page</a></p>
+            <a href=../index.html>Back to main page</a></p>
+            <p style = "text-align: left; font-size: 20px; color: red;">
+                <a href=assignmentsindex.html>Back to assignments</a></p>
         <!-- Requirement 1: A Heading -->
         <h1><mark>Requirement 1</mark>: Assignment 2 Heading</h1>
         <!-- Requirement 2: A paragraph -->
@@ -29,13 +31,13 @@
                 <div style="width: 500px; border:1px solid black; background-color: rgb(207, 177, 177)">
                     <!-- assignment 1 contains a link back to assignment 2-->
                         <a href="assignment1.html"> this text also links to assignment 1
-                            <img src="IMG/hogw.png" alt="hogw1" style="border: 2px solid blue;"
+                            <img src="../IMG/hogw.png" alt="hogw1" style="border: 2px solid blue;"
                              title="click for assignment 1"></a></div></dd>
             <dt><b>This image links to the image itself</b>; includes a hyperlink that does the same thing</dt>
             <dd> 
             <div style="width: 500px; border: 1px solid blue; background-color: rgb(100, 177, 133);">
             <a href="hogw.png" target="_blank"> This text also links to the image itself
-                <img src="IMG/hogw.png" alt="hogw" style="border: 2px solid pink;" 
+                <img src="../IMG/hogw.png" alt="hogw" style="border: 2px solid pink;" 
                 title="click for image link"></a></div></dd>
         </dl>
         <hr style="border-width: 2px; border-color: black;">
@@ -50,7 +52,7 @@
             will take you to the Black Goose Bistro website.</p>
         <p>The jungle invoker text is unrelated to the assignment, but will take you to a website.</p>
         <!-- assignment 1 contains a link to get back to assignment 2-->
-        <img src="IMG/jungleinvoker.jpg" alt="jungle invoker picture" usemap="#jungleinvokerMap" 
+        <img src="../IMG/jungleinvoker.jpg" alt="jungle invoker picture" usemap="#jungleinvokerMap" 
         style="border: 4px solid black;">
 
         <map name="jungleinvokerMap">
