--- a/cssBasicTutorial/csspadding.html
+++ b/cssBasicTutorial/csspadding.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Padding</title>
-    <link rel="stylesheet" href="webdevsitestyles.css">
+    <link rel="stylesheet" href="../webdevsitestyles.css">
 </head>
 <body id="csspaddingid">
 
-    <h1>CSS Padding practice</h1>
     <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=index.html>Back to main page</a></p>
+        <a href=../index.html>Back to main page</a></p>
     <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=practicepage.html>back to practice page</a></p>
+        <a href=../practicepage.html>back to practice page</a></p>
+        <h1>CSS Padding practice</h1>
     <div>examples examples examples examples examples examples examples examples, </div>
     <div class="csspadding">test padding stuff</div>
     <div class="csspadding2">test padding 222</div>
