--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <h1>Introduction to Web Development</h1>
     <div>
         <p style = "text-align: left; font-size: 20px; color: red;">
-            <a href=assignment1.html>Assignment 1</a></p>
-        <p style = "text-align: left; font-size: 20px; color: red;">
-            <a href=assignment2.html>Assignment 2</a></p>
+            <a href=assignments/assignmentsindex.html>Intro to Web Development assignments</a></p>
         <p style = "text-align: left; font-size: 20px; color: red;">
             <a href=practicepage.html>Practice Page for myself. </a></p>
     </div>
