--- a/practicepage.html
+++ b/practicepage.html
@@ -10,12 +10,14 @@
 <body class="practicepage" id="practicepageid">
     <p style = "text-align: left; font-size: 20px; color: red;">
         <a href=index.html>Back to main page</a></p>
-    <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=csspadding.html>CSS Padding</a></p>
-    <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=cssheightwidth.html>CSS Height/Width</a></p>
+        <h1>List of all topics (all used for practice)</h1>
+        <a class="practicepage" href=cssBasicTutorial/csspadding.html>CSS Padding</a>
+        <a class="practicepage" href=cssBasicTutorial/cssheightwidth.html>CSS Height/Width</a>
+        <a class="practicepage" href=cssBasicTutorial/cssboxmodel.html>CSS Box Model</a>
+        <a class="practicepage" href=cssBasicTutorial/cssoutline.html>CSS Outline</a>
+        <a class="practicepage" href="cssBasicTutorial/csslinks.html">CSS Links</a>
+        <a class="practicepage" href="cssBasicTutorial/csspractice.html">CSS Links</a>
     
-    <h1>List of all topics (all used for practice)</h1>
 
     <div id="practicepagediv">paddindddddddddd adf asdf asdf asdsssssssssssssssssssssssssfg test</div>
     
