--- a/assignments/assignment1.html
+++ b/assignments/assignment1.html
@@ -30,8 +30,10 @@ text-align:center;
 
 <body>
     <p style = "text-align: left; font-size: 20px; color: red;">
-        <a href=index.html>Back to main page</a></p>
-<h1> <img src="IMG/gnomed-gnome.gif" alt="gnome" style="width:96px;height:96px; border: 5px solid #555"> 
+        <a href=../index.html>Back to main page</a></p>
+        <p style = "text-align: left; font-size: 20px; color: red;">
+            <a href=assignmentsindex.html>Back to assignments</a></p>
+<h1> <img src="../IMG/gnomed-gnome.gif" alt="gnome" style="width:96px;height:96px; border: 5px solid #555"> 
 <span style="color:red">Ol</span> <span style="color:white">Chum</span> <span style="color:blue">Cavern</span></h1>
 <h2 title="the cavern" draggable="true">The Cavern </h2>
 <p> Ho ho ho ha ha, ho ho ho he ha. Hello there, old chum. I’m gnot an elf. 
